2013-02-19  Joseph Myers  <joseph@codesourcery.com>

	[BZ #13550]
	* sysdeps/i386/bp-asm.h [__BOUNDED_POINTERS__] (BOUNDS_VIOLATED):
	Remove macro.
	(ENTER): Remove both macro definitions.
	(LEAVE): Likewise.
	(CHECK_BOUNDS_LOW): Likewise.
	(CHECK_BOUNDS_HIGH): Likewise.
	(CHECK_BOUNDS_BOTH): Likewise.
	(CHECK_BOUNDS_BOTH_WIDE): Likewise.
	(RETURN_BOUNDED_POINTER): Likewise.
	(RETURN_NULL_BOUNDED_POINTER): Likewise.
	(PUSH_ERRNO_LOCATION_RETURN): Likewise.
	(POP_ERRNO_LOCATION_RETURN): Likewise.
	* sysdeps/i386/add_n.S (__mpn_add_n): Do not use removed macros.
	(__mpn_add_n) [__BOUNDED_POINTERS__]: Remove conditional code.
	* sysdeps/i386/addmul_1.S (__mpn_addmul_1): Do not use removed
	macros.
	(__mpn_addmul_1) [__BOUNDED_POINTERS__]: Remove conditional code.
	* sysdeps/i386/bsd-_setjmp.S (_setjmp): Do not use removed macros.
	* sysdeps/i386/bsd-setjmp.S (setjmp): Likewise.
	* sysdeps/i386/fpu/s_frexp.S (__frexp): Likewise.
	* sysdeps/i386/fpu/s_frexpf.S (__frexpf): Likewise.
	* sysdeps/i386/fpu/s_frexpl.S (__frexpl): Likewise.
	* sysdeps/i386/fpu/s_remquo.S (__remquo): Likewise.
	* sysdeps/i386/fpu/s_remquof.S (__remquof): Likewise.
	* sysdeps/i386/fpu/s_remquol.S (__remquol): Likewise.
	* sysdeps/i386/i486/strcat.S (strcat): Likewise.
	* sysdeps/i386/i486/strlen.S (strlen): Likewise.
	* sysdeps/i386/i586/add_n.S (__mpn_add_n): Likewise.
	(__mpn_add_n) [__BOUNDED_POINTERS__]: Remove conditional code.
	* sysdeps/i386/i586/addmul_1.S (__mpn_addmul_1): Do not use
	removed macros.
	(__mpn_addmul_1) [__BOUNDED_POINTERS__]: Remove conditional code.
	* sysdeps/i386/i586/lshift.S (__mpn_lshift): Do not use removed
	macros.
	(__mpn_lshift) [__BOUNDED_POINTERS__]: Remove conditional code.
	* sysdeps/i386/i586/memcpy.S (memcpy): Do not use removed macros.
	* sysdeps/i386/i586/memset.S (memset): Likewise.
	* sysdeps/i386/i586/mul_1.S (__mpn_mul_1): Likewise.
	(__mpn_mul_1) [__BOUNDED_POINTERS__]: Remove conditional code.